--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t ghcr.io/apatisss/jss:1.0 ./1
+      - run: docker build -t ghcr.io/apatisss/jss:1.0 
       - run: docker push ghcr.io/apatisss/jss:1.0
-      - run: docker build -t ghcr.io/apatisss/json:1.0 ./2
+      - run: docker build -t ghcr.io/apatisss/json:1.0 
       - run: docker push ghcr.io/apatisss/json:1.0
   docker_run:
     needs: [build]
