--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker pull ghcr.io/apatisss/docker2:1.0 ./node-app
+      - run: docker build ghcr.io/apatisss/docker2:1.0 ./node-app
 
