--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: docker python
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -21,11 +21,11 @@ jobs:
     needs: [push_to_registry]
     runs-on: ubuntu-latest
     steps:
-      - name: Login to GitHub Container Registry
+      - name: docker node
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build ghcr.io/apatisss/docker2:1.0 ./node-app
+      - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./node-app
 
