--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./python-app
-      - run: ls ./node-app
+      - run: pwd
   docker_node:
     needs: [push_to_registry]
     runs-on: ubuntu-latest
@@ -29,4 +29,3 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./node-app
-
