--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./python-app
-      - run: pwd
   docker_node:
     needs: [push_to_registry]
     runs-on: ubuntu-latest
@@ -28,4 +27,4 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./node-app
+      - run: docker build -t ghcr.io/apatisss/docker2:1.0 ./home/runner/work/APAPA/APAPA/node-app
