--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t ghcr.io/apatisss/APAPA:1.0 ./python-app
+      - run: docker build -t ghcr.io/apatisss/apapa:1.0 ./python-app
   docker_node:
     needs: [push_to_registry]
     runs-on: ubuntu-latest
@@ -27,4 +27,4 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t ghcr.io/apatisss/APAPA:1.0 ./node-app
+      - run: docker build -t ghcr.io/apatisss/apapa:1.0 ./node-app
