--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,15 +17,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: docker build -t ghcr.io/apatisss/apapa:1.0 ./python-app
+      
   docker_node:
     needs: [push_to_registry]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+    
+      - name: Change directory to node-app
+        run: cd ./node-app
+    
+      - name: Install Node.js dependencies
+        run: npm install  # Выполнение npm install
+    
       - name: docker node
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - run: npm install
+    
       - run: docker build -t ghcr.io/apatisss/apapa:1.0 ./node-app
