--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: cd ./node-app
     
       - name: Install Node.js dependencies
-        run: npm install  # Выполнение npm install
+        run: npm install node
     
       - name: docker node
         uses: docker/login-action@v3
